Type and spacing fixes.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,12 +9,12 @@ This is a manifest file that'll automatically include all the stylesheets availa
 
 /* HTML, body, link, paragraph, and other basics */
 
-@import url(http://fonts.googleapis.com/css?family=Karla:400,700,400italic,700italic|Fanwood+Text:400,400italic);
+@import url(http://fonts.googleapis.com/css?family=Bitter:400italic,400,700|PT+Serif:400,700italic,700,400italic|Vollkorn:700italic,400italic,400,700|Karla:400,400italic,700,700italic);
 
 html { background: #fbfbf4 url('http://subtlepatterns.com/patterns/natural_paper.png') repeat; }
 
 body {
-  font-family: "Fanwood Text", Georgia, "Times New Roman", serif;
+  font-family: "Bitter", Georgia, "Times New Roman", serif;
   font-size: 16px;
   width: 960px;
   margin: auto;
